fix: modified main, three-scene and three-scene canvas to get better results on mobile to account for the browser addressbar showing and hiding

--- a/src/styles/components/_three-scene.scss
+++ b/src/styles/components/_three-scene.scss
@@ -25,10 +25,17 @@
   width: 100%;
   height: 100%;
   z-index: -1;
+  background-color: rgb(85, 1, 1);
 }
 
 .three-scene canvas {
-  max-width: 100%;
+  // max-width: 100%;
+  width: 100%;
+  // height: calc(100% - variables.$nav-bar-height);  
+  height: 100%;
+  // display: block;
+  // display: none !important;
+  
 }
 
 // -----------------------------------------------------------------------------
@@ -40,6 +47,7 @@
   bottom: functions.px2rem(20);
   width: calc(100% - (20px * 2));
   margin: 0 20px;
+  display: none;
 }
 
 // -----------------------------------------------------------------------------
